--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
     "react-scripts": "3.2.0",
+    "react-shadow-wrapper": "^1.0.6",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
   },
