--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
+    "react-redux-loading-bar": "^4.5.0",
     "react-scripts": "3.2.0",
     "react-shadow-wrapper": "^1.0.6",
     "redux": "^4.0.4",
