--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
     "react-redux-loading-bar": "^4.5.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-shadow-wrapper": "^1.0.6",
     "redux": "^4.0.4",
