--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "would-you-rather",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://mehmetyagci.github.io/would-you-rather/",
   "dependencies": {
+    "gh-pages": "^2.1.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
@@ -18,6 +20,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
